create api endpoint to update user infos
