# swagger.json
@@ -174,6 +174,43 @@
         ]
       }
     },
+    "/auth/user/infos": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "update user informations",
+        "operationId": "update_user_infos",
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserInfoUpdateRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserDetailResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearer_token": []
+          }
+        ]
+      }
+    },
     "/auth/user/username": {
       "put": {
         "tags": [
@@ -265,6 +302,30 @@
           "success": {
             "type": "boolean",
             "example": "true"
+          }
+        }
+      },
+      "Info": {
+        "type": "object",
+        "required": [
+          "info_key",
+          "info_value"
+        ],
+        "properties": {
+          "info_key": {
+            "type": "string",
+            "example": "facebook",
+            "nullable": true
+          },
+          "info_type": {
+            "type": "string",
+            "example": "contact",
+            "nullable": true
+          },
+          "info_value": {
+            "type": "string",
+            "example": "https://facebook.com/zinkyaw",
+            "nullable": true
           }
         }
       },
@@ -390,6 +451,18 @@
           "info_value": {
             "type": "string",
             "example": "+66620350322",
+            "nullable": true
+          }
+        }
+      },
+      "UserInfoUpdateRequest": {
+        "type": "object",
+        "properties": {
+          "infos": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Info"
+            },
             "nullable": true
           }
         }
